<resources>
    <string name="app_name">Triathlist</string>
    <string name="loading">Loading...</string>
    <string name="no_connection_available">No connection available</string>
    <string name="activity_sessions">Activities</string>
    <string name="monday">Monday</string>
    <string name="default_time">00:00:00</string>
    <string name="default_lap">0 laps</string>
    <string name="default_distance">0 m</string>
    <string name="new_session">New session</string>
    <string name="session_goal_default_value">0</string>
    <string name="start_time">00:00:00</string>
    <string name="total_length">Total length:</string>
    <string name="start_total_distance">0m</string>
    <string name="laps">Laps:</string>
    <string name="start_lap">0</string>
    <string name="to_go">To go:</string>
    <string name="pause">Pause:</string>
    <string name="start_pause">00:00</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="sessions">Sessions</string>
    <string name="exit">Exit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="description_application_for_capturing_swimming_activity_in_a_swimming_pool">Description: Application for capturing swimming activity in a swimming pool</string>
    <string name="developer">Developer: Filip Kisić</string>
    <string name="company">Company: University College Algebra</string>
    <string name="programming_language">Programming language: Kotlin</string>
    <string name="course">Course: Application Development for Mobile Devices</string>
    <string name="permission_rationale">We need your location for fully functional application. You can change location permission in Settings.</string>
    <string name="weather">Weather</string>
    <string name="startMessage">No sessions yet? Jump in the pool, make a change today!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="ok">OK</string>
    <string name="start_page_title">All you need is a virtual coach</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_title">Let\'s log you in</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="login_message">We missed you, let\'s start!</string>
    <string name="placeholder">Placeholder</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_here">Register here</string>
    <string name="register_greeting">Welcome to Triathlist!</string>
    <string name="register_message">We\'ll make you big &amp; strong</string>
    <string name="height">Height in cm</string>
    <string name="weight">Weight in kg</string>
    <string name="choose_activity">Choose activity</string>
    <string name="swimming">Swimming</string>
    <string name="running">Running</string>
    <string name="cycling">Cycling</string>
    <string name="repetitions">Repetitions:</string>
    <string name="calories">Calories:</string>
    <string name="age">Age</string>
</resources>