<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_ui_display_bold"
        android:text="@string/login_title"
        android:textColor="@color/white"
        android:textSize="@dimen/title_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_message_margin_top"
        android:fontFamily="@font/sf_ui_display_regular"
        android:text="@string/welcome_back"
        android:textColor="@color/white"
        android:textSize="@dimen/subtitle_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_ui_display_regular"
        android:text="@string/login_message"
        android:textColor="@color/white"
        android:textSize="@dimen/subtitle_text_size" />

    <hr.algebra.triathlist.components.InfoTextView
        android:id="@+id/itvLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_margin_top"
        app:placeholder="@string/email" />

    <hr.algebra.triathlist.components.InfoTextView
        android:id="@+id/itvLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_spacing"
        app:placeholder="@string/password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <hr.algebra.triathlist.components.ActionButton
            android:id="@+id/btnLoginActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:background_color="@drawable/button_background_blue"
            app:button_text="Login" />

    </LinearLayout>
</LinearLayout>