<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragments"
    app:startDestination="@id/menuSession">

    <fragment
        android:id="@+id/menuSession"
        android:name="hr.algebra.triathlist.fragments.SessionListFragment"
        android:label="@string/sessions"
        tools:layout="@layout/fragment_session_list" />

    <fragment
        android:id="@+id/menuWeather"
        android:name="hr.algebra.triathlist.fragments.WeatherFragment"
        android:label="Weather"
        tools:layout="@layout/fragment_weather">
    </fragment>

    <fragment
        android:id="@+id/menuAbout"
        android:name="hr.algebra.triathlist.fragments.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about">
        <action
            android:id="@+id/action_menuAbout_self"
            app:destination="@id/menuAbout" />
    </fragment>

    <fragment
        android:id="@+id/menuExit"
        android:label="@string/exit" />

</navigation>