<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--Was Scroll before-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_ui_display_bold"
            android:text="@string/register_here"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_message_margin_top"
            android:fontFamily="@font/sf_ui_display_regular"
            android:text="@string/register_greeting"
            android:textColor="@color/white"
            android:textSize="@dimen/subtitle_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_ui_display_regular"
            android:text="@string/register_message"
            android:textColor="@color/white"
            android:textSize="@dimen/subtitle_text_size" />

        <EditText
            android:id="@+id/etRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_margin_top"
            android:background="@drawable/card_background"
            android:fontFamily="@font/sf_ui_display_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/session_goal_padding"
            android:textColor="@color/light_grey"
            android:textColorHint="@color/light_grey"
            android:textSize="@dimen/input_text_size" />

        <EditText
            android:id="@+id/etRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_spacing"
            android:background="@drawable/card_background"
            android:fontFamily="@font/sf_ui_display_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/session_goal_padding"
            android:textColor="@color/light_grey"
            android:textColorHint="@color/light_grey"
            android:textSize="@dimen/input_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <hr.algebra.triathlist.components.ActionButton
                android:id="@+id/btnRegisterActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:button_text="@string/register" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>