<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/start_page_cover" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/start_page_margin_horizontal"
            android:fontFamily="@font/sf_ui_display_bold"
            android:text="@string/start_page_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:padding="@dimen/activity_padding">

            <hr.algebra.triathlist.components.ActionButton
                android:id="@+id/btnRegister"
                android:layout_width="@dimen/start_page_button_width"
                android:layout_height="wrap_content"
                app:button_text="@string/register" />

            <hr.algebra.triathlist.components.ActionButton
                android:id="@+id/btnLogin"
                android:layout_width="@dimen/start_page_button_width"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                app:background_color="@drawable/button_background_blue"
                app:button_text="@string/login" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>